--- a/anasayfa.html
+++ b/anasayfa.html
@@ -57,7 +57,7 @@ h1 {
 	<a href="mirasımız.html">Mirasımız</a>
     <a href="cv.html">CV</a>
     <a href="iletisim.html">İletişim</a>
-    <a href="login.html">Çıkış</a>
+    <a href="index.html">Çıkış</a>
 </div>
 
 </body>
