--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
 <a href="sehrim.html">Memleket</a>
 <a href="mirasımız.html">Mirasımız</a>
 <a href="iletisim.html">İletişim</a>
-<a href="login.html">Çıkış</a>
+<a href="index.html">Çıkış</a>
 </div>
 </nav>
 
