--- a/hakkında.html
+++ b/hakkında.html
@@ -22,7 +22,7 @@
 <a href="mirasımız.html">Mirasımız</a>
 <a href="cv.html">CV</a>
 <a href="iletisim.html">İletişim</a>
-<a href="login.html">Çıkış</a>
+<a href="index.html">Çıkış</a>
 </div>
 </nav>
 
