--- a/iletisim.html
+++ b/iletisim.html
@@ -109,7 +109,7 @@
     <nav>
       <div class="nav-container">
         <a href="anasayfa.html">Anasayfa</a>
-        <a href="login.html">Çıkış</a>
+        <a href="index.html">Çıkış</a>
       </div>
     </nav>
   </div>
