--- a/mirasımız.html
+++ b/mirasımız.html
@@ -100,7 +100,7 @@
 <a href="sehrim.html">Memleket</a>
 <a href="cv.html">CV</a>
 <a href="iletisim.html">İletişim</a>
-<a href="login.html">Çıkış</a>
+<a href="index.html">Çıkış</a>
 </div>
 </nav>
 <br><br>
