--- a/sehrim.html
+++ b/sehrim.html
@@ -16,7 +16,7 @@
 <a href="mirasımız.html">Mirasımız</a>
 <a href="cv.html">CV</a>
 <a href="iletisim.html">İletişim</a>
-<a href="login.html">Çıkış</a>
+<a href="index.html">Çıkış</a>
 </div>
 </nav>
 <div class="container my-4">
